--- a/environment.yml
+++ b/environment.yml
@@ -6,5 +6,5 @@ dependencies:
   - pip
   - pip:
     - pip-tools
-    - matplotlib=3.3.2
-    - scikit_learn=0.23.2
+    - matplotlib==3.3.2
+    - scikit_learn==0.23.2
