--- a/run.yaml
+++ b/run.yaml
@@ -3,6 +3,8 @@ train:
   cloud: "gcp"
   cpu_count: 8
   memory_size: 16
+  gpu_count: 1
+  gpu_type: 'NVIDIA_TESLA_P4'
   image_tag: 'latest'
   options:
     - batch_size: 1
