--- a/run.yaml
+++ b/run.yaml
@@ -10,6 +10,6 @@ train:
     - batch_size: 1
       epoch: 5
       learning_rate: 0.0001
-    - batch_size: [1, 2]
-      epoch: [1]
+    - batch_size: [1, 2, 5]
+      epoch: [1, 2]
       learning_rate: [0.001, 0.01]
