--- a/run.yaml
+++ b/run.yaml
@@ -1,6 +1,6 @@
 train:
   model_path: 'boston_housing/model.py'
-  cloud: "local"
+  cloud: "aws"
   cpu_count: 8
   memory_size: 16
   image_tag: ''
