--- a/run.yaml
+++ b/run.yaml
@@ -1,5 +1,5 @@
 train:
-  model_path: 'boston_housing/model.py'
+  model_path: 'iris_flower/model.py'
   cloud: "aws"
   cpu_count: 8
   memory_size: 16
