--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -60,6 +61,9 @@ coverage.xml
 # Translations
 *.mo
 *.pot
+
+# MLFlow runs
+mlruns/
 
 # Django stuff:
 *.log
