--- a/run.yaml
+++ b/run.yaml
@@ -6,6 +6,6 @@ train:
   image_tag: ''
   project_name: "iris_flower"
   options:
-    - batch_size: 1
-      epoch: 5
-      learning_rate: 0.0001
+    - batch_size: [1, 2, 5]
+      epoch: [1]
+      learning_rate: [0.0001, 0.01]
