--- a/run.yaml
+++ b/run.yaml
@@ -6,6 +6,6 @@ train:
   image_tag: ''
   project_name: "iris_flower"
   options:
-    - batch_size: [1, 2, 5]
-      epoch: [1]
-      learning_rate: [0.0001, 0.01]
+    - n_neighbors: [1, 2, 5]
+      weights: ['uniform', 'distance']
+      algorithm: ['ball_tree', 'kd_tree']
