switch login to use environment variables

--- a/run.yaml
+++ b/run.yaml
@@ -7,6 +7,6 @@ train:
   project_name: "iris_flower"
   options:
     - n_neighbors: [1]
-      username: 'gcp-hydra-user'
-      password: 'ayupD3kTsxfps'
+      mlflow_tracking_username: 'gcp-hydra-user'
+      mlflow_tracking_password: 'ayupD3kTsxfps'
       google_application_credentials: './credentials/hydra-gcp-test-291317-81faaa44d19d.json'
