--- a/run.yaml
+++ b/run.yaml
@@ -1,5 +1,5 @@
 train:
-  model_path: 'iris_flower/model_elastic_net.py'
+  model_path: 'iris_flower/model.py'
   cloud: "fast_local"
   cpu_count: 8
   memory_size: 16
