--- a/run.yaml
+++ b/run.yaml
@@ -8,6 +8,6 @@ train:
   options:
     - alpha: [0.01]
       max_iter: [100]
-      MLFLOW_TRACKING_URI: 'http://mlflow.gcp.impact.georgian.io'
+      MLFLOW_TRACKING_URI: 'http://44.192.40.87:5000'
       MLFLOW_TRACKING_USERNAME: <enter_username>
       MLFLOW_TRACKING_PASSWORD: <enter_password>
