--- a/run.yaml
+++ b/run.yaml
@@ -1,9 +1,10 @@
 train:
+  'project_name': 'boston_housing'
   model_path: 'boston_housing/model.py'
   cloud: "gcp"
   cpu_count: 8
   memory_size: 16
-  image_tag: ''
+  image_tag: 'master'
   options:
     - batch_size: 1
       epoch: 5
