--- a/run.yaml
+++ b/run.yaml
@@ -8,4 +8,4 @@ train:
   options:
     - alpha: [0.01]
       max_iter: [100]
-      MLFLOW_TRACKING_URI: 'http://3.235.15.178:5000/#/'
+      MLFLOW_TRACKING_URI: 'http://3.235.15.178:5000/'
