add parameters to run.yaml file

--- a/run.yaml
+++ b/run.yaml
@@ -6,6 +6,6 @@ train:
   image_tag: ''
   project_name: "iris_flower"
   options:
-    - alpha: [0.01]
-      max_iter: [100]
+    - alpha: [0.01, 0.025, 0.05, 0.1, 0.25, 0.5]
+      max_iter: [10, 100, 250, 500]
       MLFLOW_TRACKING_URI: 'http://18.215.187.140:5000/'
