--- a/run.yaml
+++ b/run.yaml
@@ -6,6 +6,6 @@ train:
   image_tag: ''
   project_name: "iris_flower"
   options:
-    - alpha: [0.01]
-      max_iter: [10]
+    - alpha: [0.01, 0.05, 0.1]
+      max_iter: [10, 250]
       MLFLOW_TRACKING_URI: 'http://mlflow-server-lb-1073343946.us-east-1.elb.amazonaws.com:5000/'
