--- a/run.yaml
+++ b/run.yaml
@@ -7,5 +7,5 @@ train:
   project_name: "iris_flower"
   options:
     - alpha: [0.01, 0.05, 0.1]
-      max_iter: [10, 250]
+      max_iter: [10, 250, 500, 1000]
       MLFLOW_TRACKING_URI: 'http://mlflow-server-lb-1073343946.us-east-1.elb.amazonaws.com:5000/'
