--- a/run.yaml
+++ b/run.yaml
@@ -1,11 +1,11 @@
 train:
   model_path: 'iris_flower/model.py'
-  cloud: "fast_local"
+  cloud: "gcp"
   cpu_count: 8
   memory_size: 16
   image_tag: ''
   project_name: "iris_flower"
   options:
-    - alpha: [0.1]
-      max_iter: [1000]
-      MLFLOW_TRACKING_URI: 'http://mlflow-lb-1864953287.us-east-1.elb.amazonaws.com/'
+    - n_neighbors: [5, 25, 50, 75, 100]
+      weights: ['uniform']
+      MLFLOW_TRACKING_URI: 'http://mlflow.gcp.impact.georgian.io/'
