--- a/run.yaml
+++ b/run.yaml
@@ -3,6 +3,7 @@ train:
   cloud: "gcp"
   cpu_count: 8
   memory_size: 16
+  image_url: 'gcr.io/hydra-gcp-test-291317/hydra_image'
   image_tag: ''
   project_name: "iris_flower"
   options:
