test for url with tag

--- a/run.yaml
+++ b/run.yaml
@@ -4,7 +4,7 @@ train:
   cpu_count: 8
   memory_size: 16
   image_url: 'gcr.io/hydra-gcp-test-291317/hydra_image'
-  image_tag: ''
+  image_tag: 'master'
   project_name: "iris_flower"
   options:
     - n_neighbors: [5, 25, 50, 75, 100]
