test with default image url

--- a/run.yaml
+++ b/run.yaml
@@ -3,6 +3,7 @@ train:
   cloud: "gcp"
   cpu_count: 8
   memory_size: 16
+  image_tag: 'master'
   project_name: "iris_flower"
   options:
     - n_neighbors: [5, 25, 50, 75, 100]
