--- a/run.yaml
+++ b/run.yaml
@@ -3,7 +3,7 @@ train:
   cloud: "gcp"
   cpu_count: 8
   memory_size: 16
-  image_tag: 'master'
+  image_url: 'gcr.io/hydra-gcp-test-291317/hydra_image'
   project_name: "iris_flower"
   options:
     - n_neighbors: [5, 25, 50, 75, 100]
