change cloud to aws

--- a/run.yaml
+++ b/run.yaml
@@ -1,9 +1,8 @@
 train:
   model_path: 'iris_flower/model.py'
-  cloud: "gcp"
+  cloud: "aws"
   cpu_count: 8
   memory_size: 16
-  image_url: 'gcr.io/hydra-gcp-test-291317/hydra_image'
   project_name: "iris_flower"
   options:
     - n_neighbors: [5, 25, 50, 75, 100]
