--- a/small_run.yaml
+++ b/small_run.yaml
@@ -1,10 +1,10 @@
 train:
-  model_path: 'boston_housing/model.py'
+  model_path: 'model.py'
   cloud: "aws"
   cpu_count: 8
   memory_size: 16
   image_tag: ''
-  project_name: "iris_flower"
+  project_name: "breast_cancer"
   options:
     - n_neighbors: 1
       leaf_size: 30
