--- a/small_run.yaml
+++ b/small_run.yaml
@@ -6,6 +6,6 @@ train:
   image_tag: ''
   project_name: "breast_cancer"
   options:
-    - n_neighbors: 1
-      leaf_size: 30
+    - eta: 0.2
+      max_depth: 5
       MLFLOW_TRACKING_URI: 'http://52.54.64.122:5000/'
