--- a/small_run_aws.yaml
+++ b/small_run_aws.yaml
@@ -7,5 +7,5 @@ run:
   region: 'us-east-1'
   image_tag: ''
   options:
-    - eta: 0.2
-      max_depth: 5
+    - eta: [0.2, 0.5, 0.8]
+      max_depth: [10, 15, 20]
